Add Project Files

--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,5 +1,5 @@
 
-<% if(sucess && sucess.length){ %>
+<% if(success && success.length){ %>
     <div class="alert alert-success alert-dismissible fade show col6 offset-3" role="alert">
   <%= sucess %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
