Add Project Files

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -58,18 +58,18 @@
 </style>
 
 <div id="filters">
-  <a href="/listings" class="filter"><i class="fa-solid fa-border-all"></i><p>All</p></a>
-  <a href="/listings/category/trending" class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></a>
-  <a href="/listings/category/bed" class="filter"><i class="fa-solid fa-bed"></i><p>Bed</p></a>
-  <a href="/listings/category/iconic-cities" class="filter"><i class="fa-solid fa-mountain-city"></i><p>Iconic Cities</p></a>
-  <a href="/listings/category/mountains" class="filter"><i class="fa-solid fa-mountain"></i><p>Mountains</p></a>
-  <a href="/listings/category/castle" class="filter"><i class="fa-solid fa-fort-awesome"></i><p>Castle</p></a>
-  <a href="/listings/category/amazing-pools" class="filter"><i class="fa-solid fa-person-swimming"></i><p>Amazing Pools</p></a>
-  <a href="/listings/category/camping" class="filter"><i class="fa-solid fa-campground"></i><p>Camping</p></a>
-  <a href="/listings/category/farms" class="filter"><i class="fa-solid fa-cow"></i><p>Farms</p></a>
-  <a href="/listings/category/arctic" class="filter"><i class="fa-solid fa-snowflake"></i><p>Arctic</p></a>
-  <a href="/listings/category/domes" class="filter"><i class="fa-solid fa-igloo"></i><p>Domes</p></a>
-  <a href="/listings/category/boats" class="filter"><i class="fa-solid fa-ship"></i><p>Boats</p></a>
+    <a href="/listings/category/trending" class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></a>
+    <a href="/listings/category/bed" class="filter"><i class="fa-solid fa-bed"></i><p>Bed</p></a>
+    <a href="/listings/category/iconic" class="filter"><i class="fa-solid fa-mountain-city"></i><p>Iconic Cities</p></a>
+    <a href="/listings/category/mountains" class="filter"><i class="fa-solid fa-mountain"></i><p>Mountains</p></a>
+    <a href="/listings/category/castle" class="filter"><i class="fa-solid fa-fort-awesome"></i><p>Castle</p></a>
+    <a href="/listings/category/pools" class="filter"><i class="fa-solid fa-person-swimming"></i><p>Amazing Pools</p></a>
+    <a href="/listings/category/camping" class="filter"><i class="fa-solid fa-campground"></i><p>Camping</p></a>
+    <a href="/listings/category/farms" class="filter"><i class="fa-solid fa-cow"></i><p>Farms</p></a>
+    <a href="/listings/category/arctic" class="filter"><i class="fa-solid fa-snowflake"></i><p>Arctic</p></a>
+    <a href="/listings/category/domes" class="filter"><i class="fa-solid fa-igloo"></i><p>Domes</p></a>
+    <a href="/listings/category/boats" class="filter"><i class="fa-solid fa-ship"></i><p>Boats</p></a>
+    <a href="/listings/category/other" class="filter"><i class="fa-solid fa-ellipsis"></i><p>Other</p></a>
 
   <div class="tax-toggle">
     <div class="form-check-reverse form-switch">
