Add Project Files

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -58,6 +58,7 @@
 </style>
 
 <div id="filters">
+    <a href="/listings" class="filter"><i class="fa-solid fa-border-all"></i><p>All</p></a>
     <a href="/listings/category/trending" class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></a>
     <a href="/listings/category/bed" class="filter"><i class="fa-solid fa-bed"></i><p>Bed</p></a>
     <a href="/listings/category/iconic" class="filter"><i class="fa-solid fa-mountain-city"></i><p>Iconic Cities</p></a>
